# CacatuidaePlayground

./: CMakeLists.txt  README.md  _config.yml  build.sh  minimal_shell.html
01_hello_triangle/: CMakeLists.txt  hello_triangle.cpp
02_indexed_plane/: CMakeLists.txt  indexed_plane.cpp
03_textured_cube/: CMakeLists.txt  textured_cube.cpp
04_resources_loader/: CMakeLists.txt  resources_loader.cpp
05_draw_geometry/: CMakeLists.txt  shader_fuzzy.cpp
06_net_brawlers/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
06_net_brawlers/GameStates/: GSGame.h  GSMenu.h  GameStates.h  IGameState.h
06_net_brawlers/GameStates/Game/: Level.h
_includes/: page__example.html  sidebar.html  social-links.html
_layouts/: example.html
_posts/: 2018-06-01-hello_triangle.md  2018-06-02-indexed_plane.md  2018-06-03-textured_cube.md  2018-06-04-resources_loader.md  2018-06-05-draw_geometry.md  2018-11-16-shader_wave.md  2018-11-16_shader_fuzzy.md  2018-11-17-net_brawlers.md
common/: BufferObject.h  Cacatuidae.cpp  Cacatuidae.h  Camera.h  FPSCounter.h  FileLoader.h  GLContext.h  Graphics.cpp  Graphics.h  ShaderProgram.h  Texture.h
common/Graphics/: BufferObject.cpp  BufferObject.h  Enums.h  Geometry.h  Shader.h  ShaderProgram.cpp  ShaderProgram.h
common/Graphics/GLES2/: Context.h
examples/draw_geometry/: draw_geometry.js  draw_geometry.wasm
examples/hello_triangle/: hello_triangle.js  hello_triangle.wasm
examples/indexed_plane/: indexed_plane.js  indexed_plane.wasm
examples/net_brawlers/: net_brawlers.js  net_brawlers.wasm
examples/resources_loader/: resources_loader.js  resources_loader.wasm
examples/shader_fuzzy/: shader_fuzzy.js
examples/shader_wave/: shader_wave.js  shader_wave.wasm
examples/textured_cube/: textured_cube.js  textured_cube.wasm
resources/: default.fs  default.vs
